--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,4 +5,4 @@ nixPkgs = ["python311", "nodejs"]
 cmds = ["python3 -m ensurepip", "pip install -r api/requirements.txt"]
 
 [start]
-cmd = "uvicorn api.app:app --host 0.0.0.0 --port $PORT"
+cmd = "cd api && uvicorn app:app --host 0.0.0.0 --port $PORT"
